Add authorities and permissions (#72)
* feat: add basic authority model

* refactor: use i64 for permissions

* refactor: use location query builder more

* refactor: separate out mapping from tuple to location

* feat: add get authority by id route

* feat: add get authority members route

* feat: add authority create and update

* feat: add authority locations

* feat: add authority member creation

* feat: add authority member updates

* feat: add routes to router + update api docs

* fix: use correct queries for update_authority_member

* feat: add authority member deletion

* feat: add permissions checks to authority routes

* feat: add authority data to location responses

* feat: add permissions checks to location routes

* feat: add permission override for admins

* feat: add permissions checks to reservation routes

* feat: add authority permissions list route

* feat: automatically add authority creators as members

* docs: update openapi spec

* feat: add profile authorities route

* docs: update openapi spec
