# openapi.yaml
@@ -419,7 +419,7 @@ paths:
         "204":
           description: No Content
 
-  /profiles/{id}/authorities:
+  /profiles/{id}/authorities ✅:
     parameters:
       - name: id
         in: path
@@ -530,7 +530,7 @@ paths:
                       format: int64
                       example: 929839
 
-  /authorities:
+  /authorities ✅:
     get:
       tags:
         - authorities
@@ -577,7 +577,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/authority"
 
-  /authorities/permissions:
+  /authorities/permissions ✅:
     get:
       tags:
         - authorities
@@ -600,7 +600,7 @@ paths:
                   manage_opening_times: 3
                   manage_reservations: 4
 
-  /authorities/{id}:
+  /authorities/{id} ✅:
     parameters:
       - name: id
         in: path
@@ -649,7 +649,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/authority"
 
-  /authorities/{id}/locations:
+  /authorities/{id}/locations ✅:
     parameters:
       - name: id
         in: path
@@ -740,7 +740,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/location"
 
-  /authorities/{id}/members:
+  /authorities/{id}/members ✅:
     parameters:
       - name: id
         in: path
@@ -791,7 +791,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/profileWithPermissions"
 
-  /authorities/{id}/members/{profileId}:
+  /authorities/{id}/members/{profileId} ✅:
     parameters:
       - name: id
         in: path
@@ -819,7 +819,7 @@ paths:
         "204":
           description: No content
 
-  /authorities/{id}/members/{profileId}/permissions:
+  /authorities/{id}/members/{profileId}/permissions ✅:
     parameters:
       - name: id
         in: path
@@ -837,7 +837,7 @@ paths:
           type: number
           format: int32
           example: 0
-    post:
+    put:
       tags:
         - authorities
       description: Update permissions for a profile in this authority
